# ChangeLog for dev-perl/CGI-Emulate-PSGI
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI-Emulate-PSGI/ChangeLog,v 1.5 2014/08/26 17:37:36 axs Exp $

*CGI-Emulate-PSGI-0.150.0-r1 (26 Aug 2014)

  26 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +CGI-Emulate-PSGI-0.150.0-r1.ebuild, -CGI-Emulate-PSGI-0.150.0.ebuild:
  bumped EAPI to 5 to help with dev-lang/perl upgrade

  08 Jan 2013; Torsten Veller <tove@gentoo.org>
  -CGI-Emulate-PSGI-0.140.0.ebuild:
  Cleanup

*CGI-Emulate-PSGI-0.150.0 (04 Nov 2012)

  04 Nov 2012; Torsten Veller <tove@gentoo.org>
  +CGI-Emulate-PSGI-0.150.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*CGI-Emulate-PSGI-0.140.0 (02 Feb 2012)

  02 Feb 2012; Torsten Veller <tove@gentoo.org>
  +CGI-Emulate-PSGI-0.140.0.ebuild, +metadata.xml:
  Initial commit for rt-4.0 (#381855)