@@ -2,13 +2,27 @@
 Hash: SHA256
 
 DIST CGI-Emulate-PSGI-0.15.tar.gz 33556 SHA256 4a135a663f04db093552a653c483370bd91e0b960b10ab1437ac620228efdab3 SHA512 0dd95fd4d7f208d713101533408e8faf6c97db039abf442e469d74a0f467624d833b9625d25f162929c5c1c23c8af0ee2b723287c1d4d13c6b9e0b2ba4abd4d8 WHIRLPOOL b94951ca644db334c27e907e263906c8b0ad5622ecc9d66f1baf491ca3cc71c7c32be4d8124ca5997b485d0e6f3e35f8622c401c4688d64518d82009f26ba09d
+DIST CGI-Emulate-PSGI-0.20.tar.gz 14321 SHA256 3865106b22b88a0fa55821c84625acdbfa4758b1d341c6abe62613d363e2d3c2 SHA512 34f2d5e0a93e3b63a9409274d5a93f6718314e55a80c87c707ad846d7542fe64c7660786801e005402051871b9a1d9dc311d78854e5e7daddc33a9a276b031e3 WHIRLPOOL 911dd7e30219b5e1dd05f0e47f44ebc01df3d2053df45193b9498fada6438114b113123c356a6d9922597a426e3025ae4e6e99371aa710d233006b4c1f103ebc
 EBUILD CGI-Emulate-PSGI-0.150.0-r1.ebuild 553 SHA256 7c208d7661921408eef101e931ce26d0c842ab00cc25c3d13b463a9d29e45371 SHA512 d71b99dc59080a561d62714d61a1ccbac390b3a88c41244d9f158f097eeafd189c210f52dde2bedaab49fe7f72a03452db8bc8ff14a823d1f4128a0d31fa9a39 WHIRLPOOL 5521e845ab27f55ddc2dcf5dfaf04312c4d57898636633cac34f473899c37e1523a0689f9c72fb3a79987bd5f8d19fef4a590e4dac3a381e01bae11074b122a1
-MISC ChangeLog 954 SHA256 f45be9a579fab0dadd24299a3a9088fe756ab4d47d513f09414420bbd62fc715 SHA512 941f0ef53b58d21e361aa099d88b3431025b2b62c1e9176cb9c145a1f432f2e233e20702cb1c753323cc06ce18cd996a5cd99d1db64483ef559cd94cf7659290 WHIRLPOOL 27c717e2cd3a2a708d5cfa7b7724d564eb6042277cdd1fb4920e0bf6d37f086b76e397db2f4bb24051352843e79f3dcfb5e096e9e56738ab0c01da2f1bc8e4ab
+EBUILD CGI-Emulate-PSGI-0.200.0.ebuild 609 SHA256 f0aa78758bb3f7ab5aa72b31fdd2d0b7c2c9609b50ab0020b40baab3ab73c6a2 SHA512 1b5fdd339a1553cf48ebe511d80e00f46fe04b29d12188fd5ef30203a6e7a4b1bed1f7843a098c219521ddbbf38dac8406a977d791955ce32257380455753602 WHIRLPOOL f5f8fd8366b020c8718288f55538726979650d6df903969de80e0c6d416da7695f4d2d65e59a61bc13a5e1cb2e411438f01a46f8eb43634faa5cecb969f81b7a
+MISC ChangeLog 1110 SHA256 ed1cd27d8804dc36c9b03881fcd1f8191adf60a1438e357ad9b417adfae9e784 SHA512 84571d4af19d27dfa0a01d7530cbd0b93d0534ffa8b4cd789f51d2f0b8624f0af3e4bbb28c994473b2f2d2c16d63d12604c0a3359218676f3177faa0dfe6b4f3 WHIRLPOOL 28ce506aa95a069f1c7c3dba722b5ec4c7b5c29f804acd0f4ea22cc4233cf2155784b740dd6eae148b53d4f8c0936ad24fa6c8ea2da82347c94f575b52b74b58
 MISC metadata.xml 370 SHA256 33b6d47f36e5de37881fa0083e45778b834b30ab3fb1fb3fe68c47c4893ade77 SHA512 b329d1d2223d420382fc7d4b985c3eaa841ec06e3bc2d0456e523e0bf0b36dcaac971aaf2ef8267e0adeab4205463fc71d250ff1f8fb79ac421fecabbc90f773 WHIRLPOOL cb6bb688b47aabd018897dad4293e132fe9dfef947a785df36d8197bd50f2eb45d89b92e5aa8f55f4ece2a095799cf447656bf6af6cbc27fef3a87d382afb1c2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iF4EAREIAAYFAlP8xecACgkQ2ugaI38ACPAiswD/XE+QWTkOh+ONeo5s8EqrU3Y+
-M4WZ2lc/6ur8JjTfsyYA/jY6UptJ5Bzdui10FaWbUZXjPqJalnWcsZd+mn7PfUPL
-=qfz1
+iQJ8BAEBCABmBQJVHvfJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0RkJDMzI0NjNBOTIwMDY5MTQ2NkMzNDBF
+MTM4NkZEN0VGNEI1Nzc5AAoJEOE4b9fvS1d5I28P/2cYi3wkp0MWQ7gDFHTFxZR/
+E2Jca62l+ya8GNZYoW283uJLvQ3hmBYynj5yBQ1vdVC27tvIUlQCqvvrLDWAlcQu
+7YEfYJlePohtGbW2nr8Rex3i10oCLogN1x16GRKjcEc7zan133X7vrHK8XzT2Ji1
+CSYeWFpo5E4TZYavio+Qm/NoWyfvcKt/oZPFIwhR4+Tfbuo5zMSN8gBl2d4khh2f
+HCbWtKNUfVr68WoVXqDQ82cS7Ro4ywmO/bYO8odWVYZ4Tnob5R4IpaHz3duFEJcq
+30w29pU0tirhRExJjy0dqfcVsnAyxPhvn0f1Wj4h9CHxMszm+raXmwyaWdagyof4
+vvRvdug/OBu1netOXEtMtFL6GGrl1MAyhCf2AJ0aLJ+dSy+kzXQx7xd6hruYWgdL
+0r5zWvR/gULpjWd9OklTi5kq5Uc4ukrRXWIilK02eP/LzDZbrgXTkc5Vu7hebN8A
+2ihd88anjGwpNvknbnt+C7F11k9Mcheps4ImQFPTFnwPxKsXNG7U9SbB/FkBbLSL
+f3GjTaozzFW0AldmYCzTuVwR2f310RkKuUkfYcIfii0/3LdT50yLJe/uktFHP1L7
+X1H7JUk7JhJp63Ij3XSUmH6Umxt5jWB0kK/BH1aX/SPFC94w97jg+CkvHOWdH9/F
+jTIg/x1v9Q07FLybg3Mp
+=yqxA
 -----END PGP SIGNATURE-----
