@@ -1,6 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST PyYAML-3.10.tar.gz 241524 SHA256 e713da45c96ca53a3a8b48140d4120374db622df16ab71759c9ceb5b8d46fe7c SHA512 57536fd9e5515916189c37487e0da583c8e9f79dd52dedb18342f65aefb6c063c4f141326ae7b49411d0cfdfd493bb0516f5c53737c76a69c7050a74a2834a33 WHIRLPOOL 35213169491e99d45068b0fe1919aa02038dc233b124e3f59003845f362205ade8cd43f86882031af4eef3981a8c56f7098e532f3088f192c5103829e85613ff
 DIST PyYAML-3.11.tar.gz 248685 SHA256 c36c938a872e5ff494938b33b14aaa156cb439ec67548fcab3535bb78b0846e8 SHA512 76de005f59e1842108399af53178cfac2c08ee5cc996cc38ab6ec8b046c6b894422c461a1f1ed1df91abf96f154d41170227912cae7336cff88adfd3c0e8d783 WHIRLPOOL 9b457a026a57d4b90e52629dafbd48a33ff3bf3a71c531857d33acfb7e7033b963c566d82d4fabaa0ae17f534b9d5a697a2407bdb24ab3ca9fd375b49e7932c2
 EBUILD pyyaml-3.10-r1.ebuild 1117 SHA256 8e6ef66bbbf764b3b8ab6732007597726abcc4f47652b7ac31c2fbe3cb7426d9 SHA512 58bd6db5bae13846b360aeae187740e0b7da0d89523520df291a583a96727eaab5bfebf365c348a279ca735eab08790562729fe09d962c72108843345e9fb13f WHIRLPOOL fbb9679546a86957eb5d00f40e46f0d4d1c89ba8788313976a15401a19115cd969c170026c69ec009fae8b04b7229a85a019a544f0feedc86f159658ea801fc6
-EBUILD pyyaml-3.11.ebuild 1107 SHA256 b867584f68760df158d51480612c20d1a2a8469051a28cd34b79dbfd8faf6525 SHA512 92962fb8ea24810bb8a7750048550426131bf89935eef36a00ade267dfdebb548ed7829038adae0db88c5beec6b30f58e28bcaa1a47bb19fef16ad3b6d377380 WHIRLPOOL cd761a19aeb5f87e1221a3199f763c47cf2c18950bba2427be8157dfb655e773cb2b413e5563e7be46ade11eae915ead70af3b61222216424440f56252a608f4
-MISC ChangeLog 6207 SHA256 90a62e16dc47c821d2f8dfa5972228798290938527e2d7c2db3c907aaadb057a SHA512 6420986ce4b368ff9f30e814c041e88e636102470c60426d44215535ea5290dc8a88c55da5bdc17577b466d2d31b0ae7fbcc370f91cb083d57d8a463f38b8e51 WHIRLPOOL fa274ec51aa0a1abd2d6f395ecf952bdf5d21b7435c08e705274f632ee3e16a803649d3dfe6bf11753415cb6f4afec0778a0be4dd5a4d66e6958c0496771aacf
+EBUILD pyyaml-3.11.ebuild 1119 SHA256 b5c78441b11f1dc95f4f93e2449eb1d551216dbce3152ab1bcdc828253529cb1 SHA512 8fa000d5ed72856bd200abf7bea39e457960e54c94fb82029c28203bf9adae1b07a493293302fb07c923d6312a9f2b42f77a32c5e856d607a8e4e92c6e3f5b23 WHIRLPOOL a23bad2c3fd3dc98fb543821b290a070c9723ec982a42879ef401473f533cad4f578fa2c68a26e83ccb9b4f9f6c90442cb8bbdec359fd3d524cc712e64bc5bb7
+MISC ChangeLog 6313 SHA256 46e372aba4e14dbdd6eca02d17c6155a7655b67e1cf0c295b62cd8303f95bf09 SHA512 8586c456a1feefccfb4bac7770b1ebabd921db36b6c3547388f97ae89fee7c21b96626f279c1bc2bb02c067933f6b6c3f20778f026227b363913db371fbbcee0 WHIRLPOOL 544cc1733d88603555e26246dc0c2a0c0cb9e3a8d269214e6efa7678fe54e8104e9824d9b1cb588656bea262bf2655d2e961a6a6360972412794f37075f36bda
 MISC metadata.xml 260 SHA256 d36e8b0ed1fff93bb30d4d6785617b520f776a2ac9fa195f999077c6251dceb3 SHA512 28161c6abb8ddb230b2fa6574f764f54ff66cd28228f7540c39de5e5f4af08098143c4f8f520a98927ab41ce42ea66b13c227cc95f7a8165e965f88a2d7b4fd4 WHIRLPOOL 7cba9295e64cd1429a47b3d03a222ced37e2a3bacbd0e9f8c40030927b5070cfdd521eb69cc5cb2acbb1dd6802888b7067d350eabd2fd0e4a5d6416ea8833fb3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJVHvPCAAoJEPGu1DbS6WIAzk8P/1LSPCbNB6brA2ua7elSuhDZ
+A2eolJS3hVEqNLAIjyDS+Z+/kNpdkKtpipuTZJuhA0yNmWl6Hp3D39qEF66sezSc
+AxWPpUadsI+1Gps8h8UPiCDbxtc+0UZY1BroCLQjv1IEKDZPCATUUIV4dKtVUxlV
+mtoVxIaCtLdVmWHd99RNu1rtccUpcX2UHRRjBPFoPjSiIgja+u4/XVlzEzlw5rAD
+QzvSLcKjX7RtJTt+vjVasp73qwBHDQ+rz8ZS6/4R6+DkNCnSQikX5p9YZRHV/3fj
+JzVjphVpU9O5vGbYHPHsEyaiWC0/Nyo+SUXsb8I77O498F+ZJzuL9EMM2N98RtU2
+eIdRfQs3khyoNZzNq9GaAeJg0OuYZynINcyjlhb0Ub3/Jar9nw6XI/+YXP8GTI49
+BbIivzfGeApv0A9B5mXOnwHiTmRcAYA/j6P8JLaXRMjqs8fncDPKTjV/+1jBFIYd
+IE/TwOdtBsjCKVZ0RUuf0bOvLU7tQcrrFqrhP7sHSBu29uikE4YTvwINgrYFZHoE
+HZwnS/JPZtpTSavT6GVojFtvEi4388o7OxsVKSu/lsoZAULuA2EoRlrVgryI+Ama
+i0IRKAyqmTXbecKT0cYhH9GjrUDogPkVCJxnagPBxAXlWpDHmDxZehknrVsrrxMP
+PfCfydicxxHzCsxGIOC5
+=6YBz
+-----END PGP SIGNATURE-----
