@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=>=virtual/perl-CGI-3.630.0 dev-perl/HTTP-Message virtual/perl-ExtUtils-MakeMaker test? ( >=virtual/perl-Test-Simple-0.880.0 >=dev-perl/Test-Requires-0.80.0 ) dev-lang/perl:=[-build(-)]
+DESCRIPTION=PSGI adapter for CGI
+EAPI=5
+HOMEPAGE=http://search.cpan.org/dist/CGI-Emulate-PSGI/
+IUSE=test
+KEYWORDS=~amd64 ~x86
+LICENSE=|| ( Artistic GPL-1+ )
+RDEPEND=>=virtual/perl-CGI-3.630.0 dev-perl/HTTP-Message dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=mirror://cpan/authors/id/M/MI/MIYAGAWA/CGI-Emulate-PSGI-0.20.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	7a1c6bac46bba968758a2f7666af645b	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	unpacker	f300a7ca9131b1024a79762e8edd3c52
+_md5_=58ec038daca430cd32d8da0b73fa7160
